<resources>
    <string name="app_name">Puzzle_15</string>
    <string name="_15_puzzle">15 Puzzle</string>
    <string name="result">Result</string>
    <string name="new_game1">New game</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="resume">RESUME</string>
    <string name="new_game">New game</string>
    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="time">Time</string>
    <string name="step">Steps</string>
    <string name="choose_language" translatable="false">Choose language</string>
</resources>