<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/settings_id"
    android:orientation="vertical"
    android:background="@drawable/bg_wood"
    tools:context=".First_Activity">

    <include layout="@layout/tool_bar"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/bg_wood"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_marginTop="50dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:gravity="center"
            android:background="@drawable/bg_wood"
            android:layout_marginBottom="60dp"
            app:srcCompat="@drawable/menu_bg"
            >

        </androidx.appcompat.widget.AppCompatImageView>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/Start_layout"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/startBtn"
            android:id="@+id/play_res"
            android:text="@string/new_game"/>

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/resume"
            android:id="@+id/resume_res"
            style="@style/startBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/result"
            android:id="@+id/result_res"
            style="@style/startBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/exit"
            android:id="@+id/exit_res"
            style="@style/startBtn"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>